--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Your Name / Site Title"
+title                    : "M. Aravind"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "M. Aravind"
 description              : &description "personal description"
 url                      : https://youthful-swartz-ca3262.netlify.com/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -80,10 +80,11 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Sidebar Name"
+  name             : "M. Aravind"
   avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
-  location         : "Location"
+  bio              : "Science Enthusiast"
+                     "Engineer"
+  location         : "Kollam, Kerala, India"
   employer         :
   googlescholar    : "http://yourfullgooglescholarurl.com"
   email            :
