--- a/_config.yml
+++ b/_config.yml
@@ -83,8 +83,8 @@ author:
   name             : "M. Aravind"
   avatar           : "profile.png"
   bio              : "Science Enthusiast"
-  bio              : "Science Enthusiast"
-  bio              : "Science Enthusiast"
+  bio              : "Science Enthusiast2"
+  bio              : "Science Enthusiast3"
   location         : "Kollam, Kerala, India"
   employer         :
   googlescholar    : "http://yourfullgooglescholarurl.com"
