--- a/_config.yml
+++ b/_config.yml
@@ -82,12 +82,10 @@ analytics:
 author:
   name             : "M. Aravind"
   avatar           : "profile.png"
-  bio              : "Science Enthusiast"
-  bio              : "Science Enthusiast2"
-  bio              : "Science Enthusiast3"
+  bio              : "Tech & Science Enthusiast, Electronics Engineer"
   location         : "Kollam, Kerala, India"
   employer         :
-  googlescholar    : "http://yourfullgooglescholarurl.com"
+  googlescholar    : #"http://yourfullgooglescholarurl.com"
   email            :
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
@@ -97,19 +95,19 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "academicpages"
+  github           : "hakcat"
   google_plus      :
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         :
-  orcid            : "http://orcid.org/yourorcidurl"
+  linkedin         : "aravindvenma"
+  orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "replacethistwitterhandle"
+  twitter          : #"replacethistwitterhandle"
   vine             :
   weibo            :
   xing             :
