--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "Kollam, Kerala, India"
   employer         :
   googlescholar    : #"http://yourfullgooglescholarurl.com"
-  email            :
+  email            : "aravindmuraleedharan.official@gmail.com"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
@@ -98,7 +98,7 @@ author:
   github           : "hakcat"
   google_plus      :
   keybase          :
-  instagram        :
+  instagram        : "namboo_boy"
   lastfm           :
   linkedin         : "aravindvenma"
   orcid            : #"http://orcid.org/yourorcidurl"
