--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "M. Aravind"
 title_separator          : "-"
 name                     : &name "M. Aravind"
 description              : &description "personal description"
-url                      : https://youthful-swartz-ca3262.netlify.com/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://www.arvinda.ml/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "hakcat/academicpages.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
