--- a/_config.yml
+++ b/_config.yml
@@ -101,13 +101,15 @@ author:
   instagram        : "arvindnivra"
   lastfm           :
   linkedin         : "aravindvenma"
+  medium           :
   orcid            : #"http://orcid.org/yourorcidurl"
+  quora            : "https://www.quora.com/profile/M-Aravind-18"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : aravindhakcat
+  twitter          : "aravindhakcat"
   vine             :
   weibo            :
   xing             :
