--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,10 @@ main:
   - title: "Talks"
     url: /talks/    
 
+  - title: "Talks1"
+    url: /talks/    
+
+
   - title: "Teaching"
     url: /teaching/    
     
