--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site Settings
 locale                   : "en-US"
 title                    : "M. Aravind"
-title_separator          : "|"
+title_separator          : " | "
 name                     : &name "M. Aravind"
 description              : &description "personal description"
 url                      : https://www.arvinda.ml/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
@@ -264,6 +264,8 @@ plugins:
   - jekyll-gist
   - jekyll-feed
   - jekyll-redirect-from
+  - jemoji
+  - jekyll-include-cache
 # mimic GitHub Pages with --safe
 whitelist:
   - jekyll-paginate
