--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,7 +13,7 @@ main:
     url: /year-archive/
         
   - title: "Gallery"
-    url: /portfolio/
+    url: /gallery/
 
   - title: "CV"
     url: /cv/
