--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-minimal_mistakes_skin    : "contrast" 
+
 locale                   : "en-US"
 title                    : "M. Aravind"
-title_separator          : "-"
+title_separator          : "|-|"
 name                     : &name "M. Aravind"
 description              : &description "personal description"
 url                      : "https://www.arvinda.ml" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
