--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 
 locale                   : "en-US"
 title                    : "M. Aravind"
-title_separator          : |
+title_separator          : "&#124;" # Jekyll is skipping '|' for an unknown reason. Hence I am using html for the same.
 name                     : &name "M. Aravind"
 description              : &description "personal description"
 url                      : "https://www.arvinda.ml" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
