--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "M. Aravind"
 title_separator          : "&#124;" # Jekyll is skipping '|' for an unknown reason. Hence I am using html for the same.
 name                     : &name "M. Aravind"
 description              : &description "personal website of M. Aravind"
-url                      : "https://www.arvinda.ml" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://www.aravindme.ga" #"https://www.arvinda.ml" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "hakcat/academicpages.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
